added api router, error response helper, db migration logics, and integration tests
