# internal/cmd/api_server/main.go
@@ -1,10 +1,9 @@
 package main
 
 import (
-	"github.com/daniel0321forever/terriyaki-go/internal/application/services"
 	"github.com/daniel0321forever/terriyaki-go/internal/cores/config"
 	"github.com/daniel0321forever/terriyaki-go/internal/cores/container"
-	"github.com/daniel0321forever/terriyaki-go/internal/cores/migrate"
+	"github.com/daniel0321forever/terriyaki-go/migrations"
 	"github.com/daniel0321forever/terriyaki-go/internal/infrastructure/db/postgres"
 	"github.com/daniel0321forever/terriyaki-go/internal/interface/api"
 	"github.com/gin-contrib/cors"
@@ -24,7 +23,7 @@ func main() {
 		panic(err)
 	}
 
-	err = migrate.MigrateDatabase()
+	err = migrations.MigrateDatabase(db)
 	if err != nil {
 		panic(err)
 	}
@@ -35,73 +34,7 @@ func main() {
 		panic(err)
 	}
 
-	// Initialize repositories
-	userRepo := postgres.NewGormUserRepository(db)
-	grindRepo := postgres.NewGormGrindRepository(db)
-	taskRepo := postgres.NewGormTaskRepository(db)
-	participationRepo := postgres.NewGormParticipationRepository(db)
-	messageRepo := postgres.NewGormMessageRepository(db)
-	interviewSessionRepo := postgres.NewGormInterviewSessionRepository(db)
-	paymentInfoRepo := postgres.NewGormStripePaymentInfoRepository(db)
-
-	// Initialize services
-	userService := services.NewUserService(userRepo)
-	grindService := services.NewGrindService(grindRepo, userRepo, taskRepo, participationRepo, messageRepo)
-	taskService := services.NewTaskService(taskRepo)
-	messageService := services.NewMessageService(messageRepo, userRepo)
-	interviewService := services.NewInterviewService(interviewSessionRepo)
-	paymentService := services.NewStripePaymentService(userRepo, grindRepo, participationRepo, paymentInfoRepo)
-	// Initialize API handlers with services
-	grindCtrl := api.NewGrindController(grindService, userService, messageService)
-	userCtrl := api.NewUserController(grindService, userService)
-	healthCtrl := api.NewHealthController()
-	taskCtrl := api.NewTaskController(taskService, grindService)
-	messageCtrl := api.NewMessageController(userService, messageService, grindService)
-	interviewCtrl := api.NewInterviewController(interviewService, userService, taskService)
-	paymentCtrl := api.NewPaymentController(userService, paymentService)
-	profileCtrl := api.NewProfileController(userService)
-
-	// define routes
-	v1 := router.Group("/api/v1")
-	{
-		v1.POST("grinds", grindCtrl.CreateGrindAPI)
-		v1.GET("grinds", grindCtrl.GetAllUserGrindsAPI)
-		v1.DELETE("grinds/delete-all", grindCtrl.DeleteAllGrindsAPI)
-		v1.GET("grinds/current", grindCtrl.GetUserCurrentGrindAPI)
-		v1.GET("grinds/:id", grindCtrl.GetGrindAPI)
-		v1.GET("ping", healthCtrl.PingAPI)
-		v1.POST("register", userCtrl.RegisterAPI)
-		v1.POST("login", userCtrl.LoginAPI)
-		v1.POST("logout", userCtrl.LogoutAPI)
-		v1.GET("verify-token", userCtrl.VerifyTokenAPI)
-		v1.POST("tasks/finish", taskCtrl.FinishTodayTaskAPI)
-		v1.GET("tasks/today", taskCtrl.GetTodayTaskAPI)
-		v1.GET("tasks/:id", taskCtrl.GetTaskAPI)
-		v1.POST("interviews/llm", interviewCtrl.LLMWebhookAPI)
-		v1.POST("interviews/start", interviewCtrl.StartInterviewAPI)
-		v1.POST("interviews/:id/response", interviewCtrl.SaveAgentResponseAPI)
-		v1.POST("interviews/:id/end", interviewCtrl.EndInterviewAPI)
-		v1.POST("payments/payment-intent", paymentCtrl.PaymentIntentAPI)
-		v1.POST("payments/save-card-intent", paymentCtrl.SaveCardIntentAPI)
-		v1.POST("payments/save-card", paymentCtrl.SaveCardAPI)
-		v1.POST("payments/force-charging", paymentCtrl.ForceInvestigateDuedPenaltyAPI)
-		v1.GET("payments/methods", paymentCtrl.GetAvailablePaymentMethodsAPI)
-		v1.POST("payments/methods/select-default", paymentCtrl.SelectPaymentMethodAPI)
-		v1.GET("users/exists", userCtrl.CheckUserExistsAPI)
-		v1.PATCH("users/update-profile", profileCtrl.UpdateProfileAPI)
-		v1.GET("messages", messageCtrl.GetMessageAPI)
-		v1.POST("messages/invitation", messageCtrl.CreateInvitationAPI)
-		v1.POST("messages/:id/invitation/accept", messageCtrl.AcceptInvitationAPI)
-		v1.POST("messages/:id/invitation/reject", messageCtrl.RejectInvitationAPI)
-		v1.GET("messages/sent", messageCtrl.GetSentMessageAPI)
-		v1.POST("messages/:id/read", messageCtrl.ReadMessageAPI)
-	}
-
-	v2 := router.Group("/api/v2")
-	{
-		v2.POST("login", userCtrl.LoginAPIV2)
-		v2.GET("verify-token", userCtrl.VerifyTokenAPIV2)
-	}
+	api.RegisterRoutes(router, db)
 
 	router.Run(":8080")
 }
